--- a/service-details.html
+++ b/service-details.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - MyResume Bootstrap Template</title>
+  <title>Serviço</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon2.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -44,12 +44,12 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="index.html #hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
+        <li><a href="index.html #about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="index.html #resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="index.html #portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="index.html #services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <li><a href="index.html #contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -62,11 +62,11 @@
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Service Details</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Detalhes serviço</li>
           </ol>
         </nav>
-        <h1>Service Details</h1>
+        <h1>Serviço detalhes</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -80,51 +80,53 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h4>Lista de serviços</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Design no photoshop</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Python</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>HTML</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>CSS</span></a>
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>JavaScript</span></a>
               </div>
             </div><!-- End Services List -->
 
-            <div class="service-box">
-              <h4>Download Catalog</h4>
-              <div class="download-catalog">
-                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
-                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catalog DOC</span></a>
-              </div>
+            
             </div><!-- End Services List -->
 
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
-              <h4>Have a Question?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488 55</span></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">contact@example.com</a></p>
+              <h4>Contato para serviço</h4>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+55 11 96860-8571</span></p>
+              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="honoratopereiralucas99@gmail.com">honoratopereiralucas99@gmail.com</a></p>
             </div>
 
           </div>
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
-          </div>
+        <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
+  <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+
+  <h3>Programador do 1º ano do Ensino Médio com foco em tecnologias modernas</h3>
+
+  <p>
+    Atualmente estudo e desenvolvo projetos na área de tecnologia, criando sites, sistemas e ferramentas digitais. Tenho experiência prática com HTML, CSS, JavaScript e Python, além de editar imagens no Photoshop e organizar dados utilizando Excel.
+  </p>
+
+  <ul>
+    <li><i class="bi bi-check-circle"></i> <span>Desenvolvimento de páginas web utilizando HTML, CSS e JavaScript.</span></li>
+    <li><i class="bi bi-check-circle"></i> <span>Criação de automações, scripts e lógica de programação em Python.</span></li>
+    <li><i class="bi bi-check-circle"></i> <span>Edição e otimização de imagens usando Photoshop.</span></li>
+    <li><i class="bi bi-check-circle"></i> <span>Planilhas, cálculos e organização de informações no Excel.</span></li>
+  </ul>
+
+  <p>
+    Busco sempre aprimorar minhas habilidades, criando projetos reais, resolvendo problemas e aprendendo novas ferramentas que me ajudam a evoluir como programador.
+  </p>
+
+  <p>
+    Meu objetivo é continuar desenvolvendo projetos cada vez mais completos, explorando áreas como desenvolvimento web, automação, design digital e análise de dados.
+  </p>
+</div>
+
 
         </div>
 
@@ -136,18 +138,15 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Lucas Honorato Pereira</h3>
+     
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/lxcash_/"><i class="bi bi-instagram"></i></a>
+        <a href="https://github.com/10-lucashp"><i class="bi bi-github"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Lucas Honorato</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
