--- a/service-details.html
+++ b/service-details.html
@@ -44,7 +44,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i><span>Inicio</span></a></li>
+        <li><a href="index.html"><i class="bi bi-house navicon"></i><span>Inicio</span></a></li>
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i><span>Sobre mim</span></a></li>
         <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resumo</span></a></li>
         <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
@@ -103,7 +103,7 @@
           </div>
 
         <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-  <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+  <img src="assets/img/euzinho (1).jpg" alt="" class="img-fluid services-img">
 
   <h3>Programador do 1º ano do Ensino Médio com foco em tecnologias modernas</h3>
 
